# CanAnalyze

./: .gitignore  README.md  TODO.md  canalyze.pyproject  pyproject.toml  pysidedeploy.spec
installer/: CanAnalyze.iss
scripts/: build_windows_bundle.ps1  build_windows_installer.ps1  generate_windows_icon.py  run_windows.ps1  setup_windows.ps1
src/can_log_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/canalyze/: __init__.py  __main__.py  app.py  compat.py  version.py
src/canalyze/domain/: __init__.py  dataset.py  models.py
src/canalyze/services/: dbc.py  decoder.py  filtering.py  loader.py  parsers.py  plotting.py
src/canalyze/ui/: __init__.py  dbc_conflict_dialog.py  filter_controls.py  main_window.py  models.py  plot_widget.py  startup_dialog.py  view_helpers.py  workers.py
tests/: test_app.py  test_dbc_conflict_dialog.py  test_decoder_plotting.py  test_filter_controls.py  test_filtering.py  test_main_window.py  test_main_window_theme.py  test_packaging.py  test_parsers.py  test_version.py
