[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "can-log-analyzer"
version = "0.1.0"
description = "Engineering-grade desktop application for offline CAN log analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "cantools>=39.4",
  "pyqtgraph>=0.13",
  "pandas>=2.2",
  "numpy>=1.26",
  "python-can>=4.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
packaging = [
  "Nuitka>=2.6",
  "ordered-set>=4.1",
  "zstandard>=0.23",
]

[project.scripts]
canalyze = "canalyze.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
